Добавлен метод getCountByCoaches в Timetable и тесты для этого метода, доработаны прошлые тесты